[project]
name = "ConfTools-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "info@zupermind.com"}]
dependencies = ["zuper-commons-z7", "PyYAML", "setuptools"]

[project.scripts]

[tool]
[tool.poetry]
name = "ConfTools-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <info@zupermind.com>"]
packages = [{include = "conf_tools", from = "src"}, {include = "conf_tools/utils", from = "src"}]

[tool.setuptools]
packages = ["conf_tools", "conf_tools.utils"]
package-dir = {"" = "src"}
