[project]
name = "ConfTools-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]
dependencies = [
    "PyYAML",
    "setuptools",
    "zuper-commons-z7",
    ]

[tool]
[tool.poetry]
name = "ConfTools-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "conf_tools"},
    {from = "src", include = "conf_tools/utils"},
    ]

[tool.setuptools]
packages = [
    "conf_tools",
    "conf_tools.utils",
    ]
package-dir = {"" = "src"}
