[project]
name = "ConfTools-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]

[tool.poetry]
name = "ConfTools-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "conf_tools"},
    {from = "src", include = "conf_tools/utils"},
    ]

[tool.poetry.dependencies]
PyYAML = "*"
setuptools = "*"
zuper-commons-z7 = "*"

[tool.poetry.group.test.dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
